# pimple

./: Cargo.toml  LICENSE  README.md
src/: kubernetes.rs  main.rs
src/azure/: graph.rs  management.rs  mod.rs  pim.rs
src/cmd/: mod.rs  refresh.rs
src/cmd/pim/: aad_roles.rs  cache.rs  group.rs  mod.rs  role.rs
