[package]
name = "pimple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env", "string"] }
crossterm = "0.26"
futures = "0.3"
home = "0.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread", "process", "io-std"] }
uuid = { version = "1.4", features = ["v4"] }
